exhausted, must sleep

--- a/references/references.tex
+++ b/references/references.tex
@@ -1,2 +1,2 @@
 \bibliographystyle{ieeetr}
-\bibliography{references/control,references/power,references/sensing,references/web,references/other}
+\bibliography{references/control,references/sensing,references/power,references/web,references/other}
