--- a/references/sensing.bib
+++ b/references/sensing.bib
@@ -22,7 +22,7 @@
 @unpublished{Davidson,
   author = {Michael W. Davidson},
   title  = {Education in Microscopy and Digital Imaging},
-    institution = {National High Magnetic Field Laboratory, Florida State University}
+  institution = {National High Magnetic Field Laboratory, Florida State University},
   url = {https://zeiss-campus.magnet.fsu.edu/articles/lightsources/tungstenhalogen.html}
 }
 
@@ -49,7 +49,7 @@
 
 @unpublished{key,
   author = {Mila Luleva and Herman Vedder},
-  institution = {AgroCares}
+  institution = {AgroCares},
   title  = {Near-Infrared Spectroscopy for soil analysis},
   url = {https://www.agrocares.com/2020/11/03/near-infrared-spectroscopy-for-soil-analysis/}
 }
