--- a/research/previous-work.tex
+++ b/research/previous-work.tex
@@ -25,7 +25,7 @@ In 2021 UCF’s ECE Senior Design Group 1 designed a Chlorophyll Fluorescence Sp
 This project produces a design with similar goals to the Auto Garden Bed, because it features a light source, a target object, focusing optics, wavelength selection, and generating and interpreting a spectrograph. However, the optical regime of UV rays may be limited to fluorescence spectroscopy and unfit for proximity soil sensing. The research will have to determine what sensors are viable and whether this imposes further constraints on the system.
 
 \subsubsection{Smart Garden Controller}
-The Smart Garden Controller was a UCF senior design project with very similar motivations to the Auto Garden Bed. The goal was to create a system that reduced user labor by automating the irrigation schedule of garden areas and reducing waste by sensing moisture levels. The system was also designed to anticipate the informational needs of the gardener and come prepared with a set of popular vegetables and plants, corresponding to variables the team had already investigated to maximize flourishing. It used sensors to detect the health of the plant environment, a microcontroller to facilitate irrigation, and a web API to interface to the user for control of the system. The group also set goals to offer ease of setup, competitive price, and Smart Device integration by integrating with a device like Amazon’s “Alexa.” The last similar design features are wall plug power consumption, lithium ion battery backup power, and http secure information protocol over wifi.
+The Smart Garden Controller was a UCF senior design project with very similar motivations to the Auto Garden Bed. The goal was to create a system that reduced user labor by automating the irrigation schedule of garden areas and reducing waste by sensing moisture levels\cite{smart-garden-controller}. The system was also designed to anticipate the informational needs of the gardener and come prepared with a set of popular vegetables and plants, corresponding to variables the team had already investigated to maximize flourishing. It used sensors to detect the health of the plant environment, a microcontroller to facilitate irrigation, and a web API to interface to the user for control of the system. The group also set goals to offer ease of setup, competitive price, and Smart Device integration by integrating with a device like Amazon’s “Alexa.” The last similar design features are wall plug power consumption, lithium ion battery backup power, and http secure information protocol over wifi.
 \begin{figure}[H]
     \caption{Smart Garden Controller}
     \centering
@@ -47,7 +47,7 @@ Another point of interest in the Automated Rotating Solar Plant Rack is its rota
 
 
 \subsubsection{Stem 'n' Leaf}
-Stem 'n' Leaf\footnote{https://www.ece.ucf.edu/seniordesign/sp2021su2021/g07/} is a UCF Senior Design project. The focus of this project was to be a ``modular hydroponics system'' wherein each plant unit can be fed my a singular control unit. Thus, the ``stem'' is the control unit and the ``leaves'' are the plant units. Their design was focused on modularity and scalability. Hence their design is stackable and tileable design of the bed itself. The key features of this plant bed is that it self-regulates pH and integrates with a mobile application.
+Stem 'n' Leaf is a UCF Senior Design project. The focus of this project was to be a ``modular hydroponics system'' wherein each plant unit can be fed my a singular control unit. Thus, the ``stem'' is the control unit and the ``leaves'' are the plant units\cite{stem-n-leaf}. Their design was focused on modularity and scalability. Hence their design is stackable and tileable design of the bed itself. The key features of this plant bed is that it self-regulates pH and integrates with a mobile application.
 \begin{figure}[H]
     \caption{Stem 'n' Leaf}
     \centering
@@ -57,7 +57,7 @@ Stem 'n' Leaf\footnote{https://www.ece.ucf.edu/seniordesign/sp2021su2021/g07/} i
 The project uses a liquid pH-sensor to obtain the relevant data. Our team wants a similar result but will be trying to achieve this via optical means. Their team mentioned the durability of the sensor which is our team's chief concern seeing as acidic and basic solutions tend to be corrosive and promote oxidation of metals thus the optical approach should improve longevity of the project. 
 
 \subsubsection{Green Steel Garden}
-Green Steel Garden\footnote{https://www.ece.ucf.edu/seniordesign/su2021fa2021/g11} is another UCF Senior Project that our team is pulling some inspiration from. Another hydroponics system that measures soil nutrients and pH for controlling the parameters of the garden bed. The key feature of this project is the nutrients system and the pH sensor.
+Green Steel Garden is another UCF Senior Project that our team is pulling some inspiration from. Another hydroponics system that measures soil nutrients and pH for controlling the parameters of the garden bed\cite{green-steel}. The key feature of this project is the nutrients system and the pH sensor.
 
 \begin{figure}[H]
     \caption{Green Steel Garden}
