--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -548,7 +548,7 @@ There are several methods of detecting broad spectral regimes. Scanning is much 
 	\hline
 	Manufacturer & Model & Stroke Length (mm) & Step Angle (degrees) & Step Size (mm) & Voltage (V) & Current (A) & Cost (\textdollar)\\
 	\hline
-	Rattmmotor & T0601-50 & 50 & 1.8 & 0.005 & 24 & 0.8 & 39.00\\
+	Rattmmotor & T0601-50 & 50 & 1.8 & 0.005 & 24 & 0.8 & 30.76\\
 	\hline
 	TOAUTO & T0601-100 & 100 & 1.8 & 0.005 & 24 & 0.6 & 67.00\\
 	\hline
@@ -676,3 +676,32 @@ As stated above, the beam that needs to be coupled into the fiber is not collima
 
 Since cost is equivalent for all models, the only factors are numerical aperture and beam size. All three beam sizes are acceptable and will not have a significant impact on the system quality. In order to maximize the amount of light that can be coupled into the fiber, the numerical aperture will be selected to match that of the fiber. Our group selected Model F240SMA-980 for these reasons.
 
+\paragraph{Bill of Materials}
+
+\begin{table}[H]
+	\centering
+	\label{table:SensingBOM}
+	\caption{Sensing Subsystem Bill of Materials}
+	\bigskip
+	\begin{tabular}{|p{2cm}|p{2.5cm}|p{2cm}|p{2.75cm}|p{1.75cm}|}
+	\hline
+	Qty & Cost (\textdollar) & Manufacturer & Item & Model\\
+	\hline
+	1 & 13.06 & Newark & VIS Photodiode & BPX 61\\
+	\hline
+	1 & 50.21 & Excelitas & NIR Photodiode & 0800-3111-01\\
+	\hline
+	1 & 30.76 & Rattmmotor & Linear Rail Actuator & T0601-50\\
+	\hline
+	1 & 30.76 & Edmund Optics & Blazed Reflection Grating & 43-753\\
+	\hline
+	1 & 30.76 & Thorlabs & Biconvex Lens & LB1471\\
+	\hline
+	1 & 30.76 & Thorlabs & Fiber Patch Cable & M45L02\\
+	\hline
+	1 & 30.76 & Thorlabs & Fiber Collimator & F240SMA-980\\
+	\hline
+	1 & 30.76 & Osram Sylvania & Tungsten Halogen Bulb & 54262\\
+	\hline
+	\end{tabular}
+\end{table}
