--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -584,8 +584,7 @@ There are several methods of detecting broad spectral regimes. Scanning is much 
 	\end{tabularx}
 \end{table}
 
-The ratio between the stroke length and step size needs to be well above 1,500 in order to meet the criterion for spectral resolution. Luckily, the product with the least range is well over that limit, at 10,000:1. That allows cost to become the driving factor. The T0601-50, distributed by Rattmmotor, is just over half the price of the next cheapest option. This is the group’s choice of scanner
-
+The ratio between the stroke length and step size needs to be well above 1,500 in order to meet the criterion for spectral resolution. Luckily, the product with the least range is well over that limit, at 10,000:1. That allows cost to become the driving factor. The T0601-50, distributed by Rattmmotor, is just over half the price of the next cheapest option. This is the group’s choice of scanner.
 
 \paragraph{Reflective Diffraction Grating}
 
