--- a/design-details/power.tex
+++ b/design-details/power.tex
@@ -69,7 +69,7 @@ In Figure 41, we re-designed the ciruit get the regulated output voltage of appr
     \label{fig:10V-linear-voltage-regulator}
 \end{figure}
 \paragraph{Switching Voltage Regulator Designs}
-The same approach was used for the switching voltage regulator to find out how to achieve the correct output voltage. This will be done for the CC3220 microcontroller that operates at 3.3V and the sensors operating at 5V. Luckily, in the Texas Instrument datasheet they had schematic done for their fixed version as well as their adjustable version. In the fixed version, we are able to set the output regulated voltages to different amounts, such as 3.3, 5, 12, and 15V, leaving the load current fixed to 3A. This is shown in the figure below.\par
+The same approach was used for the switching voltage regulator to find out how to achieve the correct output voltage. This will be done for the CC3220 microcontroller that operates at 3.3V and the sensors operating at 5V. Luckily, in the Texas Instrument datasheet they had 2 different versions of their schematic done for their fixed version as well as their adjustable version. In the fixed version, we are able to set the output regulated voltages to different levels, such as 3.3, 5, 12, and 15V, leaving the load current fixed to 3A. This is shown in the figure below.\par
 \begin{figure}[H]
     \centering
     \caption{LM2576 Fixed Switching Voltage Regulator}
