fix some warnings

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -64,7 +64,7 @@ In this section we will cover the standards we will be adhering to throughout th
 \section{Testing}                               % Section 6 - add sections for individual test plans, and integration test
 Incremental unit testing will be used during the development process
 to ensure each subsystem fulfills design requirements as described in
-\autoref{sec:??}. Controller subsystem testing will be performed in
+Section \ref{sec:specs-and-reqs}. Controller subsystem testing will be performed in
 \autoref{sec:controller_subsystem_testing}, power subsystem testing will be
 performed in \autoref{sec:power_subsystem_testing}, sensing subsystem testing
 will be performed in \autoref{sec:sensing_subsystem_testing}, and web subsystem
