--- a/Title.tex
+++ b/Title.tex
@@ -1,5 +1,6 @@
 \begin{titlepage}
     \begin{center}
+        \includegraphics[width=.8\textwidth]{images/UCF-crest.png}
         \section*{G.A.R.D.E.N.I.R.S}
         \subsection*{Garden Automated Rain/Daylight Executed by NIR Sensing}
         \subsection*{Group 9}
