--- a/references/control.bib
+++ b/references/control.bib
@@ -5,12 +5,14 @@
     month = sep,
     publisher = {{RFC} Editor},
     author = {J. Postel},
-    title = {Internet Protocol}
+    title = {Internet Protocol},
+    institution = {DARPA Internet Program}
 }
 
 @unpublished{Kristoff,
     url = {https://condor.depaul.edu/jkristof/technotes/tcp.html},
     author = {John Kristoff},
+    note = {In order to understand the basics of TCP},
     title = {The Transmission Control Protocol}
 }
 
