--- a/project-description/specifications-requirements.tex
+++ b/project-description/specifications-requirements.tex
@@ -1,4 +1,4 @@
-\subsection{Specifications and Requirements}
+\subsection{Specifications and Requirements}\label{sec:specs-and-reqs}
 This project idea requires the integration of power, systems, computer, optical, and web engineering to achieve a final product of a self-sustaining plant bed. The design in \autoref{fig:overall-block} shows four different subsystems the team has designated as power, control, sensing, and web.
 \begin{figure}[H]
     \caption{Overall block diagram}
