Adding more to solar panel testing

--- a/testing/power-testing.tex
+++ b/testing/power-testing.tex
@@ -4,6 +4,12 @@
 \subsubsection{Solar Panel Testing}
 \paragraph{}The solar panels in the system are very important because they essentially collect all the power for the system to operate. We will be testing and verifying that the open circuit voltage and the operating current are what they are supposed to be outputing in direct sunlight. \par
 This is a quite simple test only needing the solar panels and a multimeter. To test the voltage coming out of the solar panel,we will be place it outside and we will grab the multimeter and set higher than the voltage that is said on the solar panel. Connecting the multimeter to the ends of the solar panel we can confirm the voltage that the solar panel should be outputing. The same steps are done to test the current that should be outputed from the solar panels.\par
+\begin{figure}[H]
+    \centering
+    \caption{Solar Panel Testing}
+    \includegraphics[width=\textwidth]{images/Solar_Panel_testing.png}
+    \label{fig:Solar_Panel_testing}
+\end{figure}
 \subsubsection{Voltage Regulator}
 \paragraph{}Providing power is an important part to operating a system, but providing the right amount of power is key to make sure all the components are operating properly. In this section we will test various designs from section 5 to see which of the designs for the given voltage regulators or from WEBENCH are best fit and most efficient. \par 
 In this test, we will re-create the circuit designs that were in section 5, onto a breadboard using the right capacitors, resistors, and diodes. Then we will us an oscilloscope and a multimeter to measure the output voltages and currents for each design. This will help verify which circuit can regulate the voltage the best and most efficiently. \par
