--- a/testing/power-testing.tex
+++ b/testing/power-testing.tex
@@ -12,4 +12,5 @@ This is a quite simple test only needing the solar panels and a multimeter. To t
 \end{figure}
 \subsubsection{Voltage Regulator}
 \paragraph{}Providing power is an important part to operating a system, but providing the right amount of power is key to make sure all the components are operating properly. In this section we will test various designs from section 5 to see which of the designs for the given voltage regulators or from WEBENCH are best fit and most efficient. \par 
-In this test, we will re-create the circuit designs that were in section 5, onto a breadboard using the right capacitors, resistors, and diodes. Then we will us an oscilloscope and a multimeter to measure the output voltages and currents for each design. This will help verify which circuit can regulate the voltage the best and most efficiently. \par
+In this test, we will re-create the circuit designs that were in section 5, onto a breadboard using the right capacitors, resistors, and diodes. Then we will us an oscilloscope and a multimeter to measure the output voltages and currents for each design. This will help verify our theoretical values that we got from the design section in section 5. \par
+As a resultant in the end, the outputs should be consistent with what we are looking for on the oscilloscope and the multimeter. After getting the final results from this test also, we can conclude which voltage regulator design we want to use for this system.\par
