--- a/design-details/web.tex
+++ b/design-details/web.tex
@@ -51,7 +51,7 @@ The URIs will follow the convention of \verb|.../[noun]/[verb]/{identifier}|. Th
                           & GET & Get data on a garden bed, join garden bed info with data  \\\cline{2-3}
                           & PUT & Update garden bed information, such as IP, location, etc. \\\cline{2-3}
                           & DELETE & Delete the garden bed from the database and ensure no records are orphaned \\\hline
-        \texttt{.../garden/\textbraceleft garden\_id\textbraceright/command} & POST & Sends the command specified by the request object to the garden bed \\
+        \texttt{.../garden/\textbraceleft garden\_id\textbraceright\newline/command} & POST & Sends the command specified by the request object to the garden bed \\
         \hline
     \end{tabularx}
     \caption{URI table}
