--- a/research/technology.tex
+++ b/research/technology.tex
@@ -44,7 +44,8 @@ Physics Open Lab is a blog posting site for do-it-yourself physics laboratory pr
 A developer can program applications such as those demonstrated in figure \ref{fig:docker_arch} \cite{docker-what-container}, package them into images and run them in containers. Docker works with the OS kernel to provide the same environment to the application each and everytime.
 
 One of the largest advantages to using and implementing Docker that the team sees is that one team member can program and package the image and it should ``just run'' on any other team member's machine. This fact will prove very useful in integration testing especially for the socket server detailed in Section \ref{sec:web_subsystem}.
-
+\paragraph{Elastic Compute Cloud}
+Amazon Web Services offers a service called called Elastic Compute Cloud (EC2).
 \paragraph{User Interface}
 Because these are web technologies we will be using Javascript frontend frameworks/libraries for creating the frontend. Based upon cursory research, the most feature-rich and most widely used are React and VueJS.
 \subparagraph{React}
